# github-actions-experiments

./: .bumpversion.cfg  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  installed.yml  release.yml  run-nox.yml
github_actions_experiments/: __init__.py
tests/: test_experiment.py
